2008-02-08  Aaron Bockover  <abock@gnome.org>

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	Fixed double clicking again

2008-02-08  Aaron Bockover  <abock@gnome.org>

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Header.cs:
	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs:
	Implemented most of what is required for column reordering, but not
	100% complete yet

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListViewGraphics.cs: DrawColumnHighlight
	now can have an override color
	
	* src/Core/Hyena.Gui/Hyena.Data.Gui/ColumnController.cs: Added Reorder

2008-02-08  Aaron Bockover  <abock@gnome.org>

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	Fixes to mouse/button behavior: context menu works on multiple selection
	again and a single row can be selected (clearing all other rows) inside
	of a multi-row selection

2008-02-08  Aaron Bockover  <abock@gnome.org>

	This commit adds child source sorting on the library and gets rid of any
	remaining gobject/gtk warnings and other ugly debug spew

	* build/build.rules.mk: Copy .config files to the output directory if
	they exist in the source directory

	* configure.ac: Do not generate the .config for Banshee.Widgets

	* src/Backends/Banshee.GStreamer/Banshee.GStreamer/PlayerEngine.cs:
	If Volume is changed before the engine is initialized then store it
	temporarily and perform the actual set after initialization

	* src/Core/Banshee.Services/Banshee.ServiceStack/DBusServiceManager.cs:
	Use Log to print messages instead of Console.WriteLine

	* src/Core/Banshee.Services/Banshee.Sources/Source.cs: Added child source
	sorting back

	* src/Core/Banshee.ThickClient/Banshee.Gui/SourceActions.cs:
	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml:
	Connect the UI and actions to allow child source sorting
